k8s/applications/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorteamos-service
spec:
  selector:
    app: sorteamos
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: websocket
      port: 6001
      targetPort: 6001
    - name: asterisk
      port: 8358
      targetPort: 8358
      protocol: UDP
    - name: asterisk-rtp-open
      port: 10000
      targetPort: 10000
      protocol: UDP
    - name: asterisk-rtp-end
      port: 20000
      targetPort: 20000
      protocol: UDP
  type: ClusterIP
