k8s/applications/base/ingress-asterisk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sorteamos-asterisk-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ipbox.main.apps.sorteamos.online
    secretName: sorteamos-asterisk-certs
  rules:
  - host: "ipbox.main.apps.sorteamos.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sorteamos-service
            port:
              number: 8358
